2005-04-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/plug-ins/clothify.py: don't reset the passed
	parameters to default values. Spotted by Joao S. O. Bueno Calligaris.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-scale.h: corrected variable names.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_image): detach from the drawable.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* app/core/gimptemplate.c (gimp_template_create_image): fill the
	layer before adding it to the image.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c (render_image_rgb): fixed
	an oversight from yesterday's changes.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* app/core/gimpunit.c
	* libgimp/gimpunitcache.c: built-in units are const.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c: spare a few CPU cycles.

2005-04-27  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.c (tile_manager_get_tile): removed
	redundant check.

	* app/display/gimpdisplayshell-render.c: don't access the next
	tile if we are at the end of the render loop anyway.

2005-04-27  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c: removed unused byte_order
	variables.

2005-04-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-colormap.[ch]: declared the return value of
	gimp_image_get_colormap() as const.

	* app/display/gimpdisplayshell-render.c: added some const qualifiers.

2005-04-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpclipboard.c (gimp_clipboard_free): free all
	memory allocated for GimpClipboard.

	* libgimpwidgets/gimppatheditor.c (gimp_path_editor_set_path):
	always free old_path.

2005-04-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpunitstore.c: don't call va_arg() too often.

	* libgimpconfig/gimpcolorconfig.c (gimp_color_config_finalize):
	free the string allocated for the display module.
